# vos

./: .rust-toolchain.toml  Cargo.toml  LICENSE-APACHE  Makefile  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: makefile.yml
arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_start.asm  multiboot.asm
crates/allocator/: Cargo.toml
crates/allocator/src/: allocator.rs  lib.rs  linked_list.rs
crates/allocator/tests/: alloc.rs
crates/libkernel/: Cargo.toml
crates/libkernel/src/: lib.rs  serial.rs
crates/libkernel/src/gdt/: interrupt.rs
crates/libkernel/src/memory/: mod.rs
crates/libkernel/src/memory/frames/: mod.rs
crates/libkernel/src/memory/paging/: entry.rs  mapper.rs  temporary.rs
crates/libkernel/src/vga/: cursor.rs  text.rs
src/: lib.rs  serial.rs
src/font/: mod.rs  monocraft.rs
src/gdt/: interrupt.rs  mod.rs
src/memory/: allocator.rs  frames.rs  mod.rs  paging.rs
src/memory/allocator/: linked_list.rs  mod.rs
src/memory/frames/: bump_alloc.rs  tiny_alloc.rs
src/memory/paging/: inactive.rs  mapper.rs  mod.rs  tables.rs
src/text/: mod.rs
src/vga/: cursor.rs  mod.rs  text.rs
targets/: x86_64-custom.json
